@@ -1316,9 +1316,14 @@ WML_HANDLER_FUNCTION(modify_side, /*event_info*/, cfg)
 		config::attribute_value flag = cfg["flag"];
 		if(!flag.empty()) {
 			teams[team_index].set_flag(flag);
-			resources::screen->reinit_flags_for_side(team_index);
 			// Needed especially when map isn't animated.
 			invalidate_screen = true;
+		}
+		// If either the flag set or the team color changed, we need to
+		// rebuild the team's flag cache to reflect the changes. Note that
+		// this is not required for flag icons (used by the theme UI only).
+		if(!color.empty() || !flag.empty()) {
+			resources::screen->reinit_flags_for_side(team_index);
 		}
 		// Change flag icon
 		config::attribute_value flag_icon = cfg["flag_icon"];
